# Assimp

./: CMakeLists.txt
src/Assimp/: modelLoader.cpp  modelLoader.h
